2007-09-12  Benny Malengier  <benny.malengier@gramps-project.org>
	* src/plugins/lineage.py: Improvements

2007-09-12  Don Allingham  <don@gramps-project.org>
	* src/docgen/ODFDoc.py (ODFDoc): Fix ratio assignment

2007-09-12  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/plugins/IndivComplete.py (write_person):
	* src/plugins/IndivSummary.py (write_report):
	Change image alignment from 'row' to 'center'.

2007-09-08  Benny Malengier  <benny.malengier@gramps-project.org>
	* src/plugins/lineage.py: Quick report lineage based on code Jerome
	* po/POTFILES.in : translate lineage
	* src/plugins/Makefile.am : distribute lineage

2007-09-11  Don Allingham  <don@gramps-project.org>
	* src/PageView.py: add some documentation

2007-09-08  Benny Malengier  <benny.malengier@gramps-project.org>
	* src/PageView.py    : cleanup
	* src/QuickReports.py: fix error getting source handle

2007-09-10  Don Allingham  <don@gramps-project.org>
	* src/SubstKeywords.py (SubstKeywords.replace_and_clean): fix substitution
	* src/ImgManip.py: fix typo
	
2007-09-10  Don Allingham  <don@gramps-project.org>
	* src/plugins/WriteCD.py: don't generate thumbnails
	* src/Selectors/_SelectObject.py: new image sizing routines
	* src/ImgManip.py: simplify
	* src/docgen/HtmlDoc.py: new image sizing routines
	* src/docgen/ODFDoc.py: new image sizing routines
	* src/docgen/LaTeXDoc.py: new image sizing routines
	* src/docgen/RTFDoc.py: new image sizing routines
	* src/Makefile.am: add ThumbNails.py
	* po/POTFILES.in: add ThumbNails.py

2007-09-10  Don Allingham  <don@gramps-project.org>
	* src/ThumbNails.py: Added to handle the thumbnailing routines
	* src/DataViews/_MediaView.py: thumbnail updates
	* src/DataViews/_PedigreeView.py: thumbnail updates
	* src/DataViews/_RelationView.py: thumbnail updates
	* src/Editors/_EditMediaRef.py: thumbnail updates
	* src/Editors/_EditMedia.py: thumbnail updates
	* src/DisplayTabs/_GalleryTab.py: thumbnail updates
	* src/plugins/WebCal.py: thumbnail updates